Source/WebCore/accessibility/win/AccessibilityObjectWrapperWin.cpp
@@ -45,14 +45,10 @@ void AccessibilityObjectWrapper::accessibilityAttributeValue(const AtomString& a
 
     // Not a real concept on Windows, but used heavily in WebKit accessibility testing.
     if (attributeName == "AXTitleUIElementAttribute") {
-        if (!m_object->exposesTitleUIElement())
-            return;
-
-        AccessibilityObject* obj = m_object->titleUIElement();
-        if (obj) {
+        if (auto* object = m_object->titleUIElement()) {
             ASSERT(V_VT(result) == VT_EMPTY);
             V_VT(result) = VT_UNKNOWN;
-            AccessibilityObjectWrapper* wrapper = obj->wrapper();
+            AccessibilityObjectWrapper* wrapper = object->wrapper();
             V_UNKNOWN(result) = wrapper;
             if (wrapper)
                 wrapper->AddRef();
